<resources>
    <string name="app_name">L04_Reservation</string>
    <string name="name">Name:</string>
    <string name="mobile_num">Phone Number:</string>
    <string name="group_size">Group Size(1-8)</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="smoking_area">Smoking Area:</string>
    <string name="reservation">Reservation</string>
    <string name="reserve">Reserve</string>
    <string name="reset">Reset</string>
</resources>