<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#474646"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/reservation"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/in_name0"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:background="#8E8D8D"
                        android:inputType="text"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/in_name"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/in_number0"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight=".3"
                        android:background="#8E8D8D"
                        android:inputType="text"
                        android:text="@string/mobile_num"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/in_number"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:background="#FFFFFF"
                        android:ems="10"
                        android:inputType="text" />
                </LinearLayout>

                <EditText
                    android:id="@+id/in_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D6D3D3"
                    android:digits="12345678"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/group_size"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="false"
                    android:textColorHint="#E91E63"
                    android:textStyle="bold" />

                <DatePicker
                    android:id="@+id/in_dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner" />

                <TimePicker
                    android:id="@+id/in_tp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:timePickerMode="spinner" />

                <ToggleButton
                    android:id="@+id/in_smoking_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/smoking_area"
                    android:textColor="#E91E63"
                    android:textOff="Smoking Area [ N ]"
                    android:textOn="Smoking Area [ Y ]"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/in_reserve"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reserve"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/in_reset"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reset" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>

